--- a/vignettes/promises_02_intro.Rmd
+++ b/vignettes/promises_02_intro.Rmd
@@ -106,7 +106,7 @@ transform the result values somehow.
 **Chain together operations? Using the `%>%` operator?**
 
 A lot like that! You can’t use the `%>%` operator itself, but we provide a
-promise-compatible version of it: `%...>%`. So whereas you might do this to a
+promise-compatible version of it: `%then%`. So whereas you might do this to a
 regular data frame:
 
 ```r
@@ -120,41 +120,41 @@ The async version would look like:
 
 ```r
 library(dplyr)
-read.csv.async("https://rstudio.github.io/promises/data.csv") %...>%
-  filter(state == "NY") %...>%
+read.csv.async("https://rstudio.github.io/promises/data.csv") %then%
+  filter(state == "NY") %then%
   View()
 ```
 
-The `%...>%` operator here is the secret sauce. It’s called the *promise pipe*;
+The `%then%` operator here is the secret sauce. It’s called the *promise pipe*;
 the `...` stands for promise, and `>` mimics the standard pipe operator.
 
 **What a strange looking operator. Does it work just like a regular pipe?**
 
-In many ways `%...>%` does work like a regular pipe: it rewrites each stage’s
+In many ways `%then%` does work like a regular pipe: it rewrites each stage’s
 function call to take the previous stage’s output as the first argument. (All
 the [standard magrittr
 tricks](https://CRAN.R-project.org/package=magrittr/vignettes/magrittr.html)
 apply here: `.`, `{`, parenthesized lambdas, etc.) But the differences, while
 subtle, are profound.
 
-The first and most important difference is that `%...>%` *must* take a promise
+The first and most important difference is that `%then%` *must* take a promise
 as input; that is, the left-hand side of the operator must be an expression that
-yields a promise. The `%...>%` will do the work of “extracting” the result value
+yields a promise. The `%then%` will do the work of “extracting” the result value
 from the promise, and passing that (unwrapped) result to the function call on
 the right-hand side.
 
-This last fact—that `%...>%` passes an unwrapped, plain old, not-a-promise value
+This last fact—that `%then%` passes an unwrapped, plain old, not-a-promise value
 to the right-hand side—is critically important. It means we can use promise
-objects with non-promise-aware functions, with `%...>%` serving as the bridge
+objects with non-promise-aware functions, with `%then%` serving as the bridge
 between asynchronous and synchronous code.
 
-**So the left-hand side of `%...>%` needs to be one of these special promise
+**So the left-hand side of `%then%` needs to be one of these special promise
 objects, but the right-hand side can be regular R base functions?**
 
 Yes! R base functions, dplyr, ggplot2, or whatever.
 
 However, that work often can’t be done in the present, since the whole point of
-a promise is that it represents work that hasn’t completed yet. So `%...>%` does
+a promise is that it represents work that hasn’t completed yet. So `%then%` does
 the work of extracting and piping not at the time that it’s called, but rather,
 sometime in the future.
 
@@ -190,7 +190,7 @@ applied to an object of class "promise"`. And the pipe won’t help you either;
 Exactly. Now let’s try something that actually works:
 
 ```r
-df_promise %...>% filter(state == "NY")
+df_promise %then% filter(state == "NY")
 ```
 
 At the moment it’s called, this code won’t appear to do much of anything,
@@ -198,7 +198,7 @@ really. But whenever the `df_promise` operation actually completes successfully,
 then the result of that operation—the plain old data frame—will be passed to
 `filter(., state = "NY")`.
 
-**OK, so that’s good. I see what you mean about `%...>%` letting you use
+**OK, so that’s good. I see what you mean about `%then%` letting you use
 non-promise functions with promises. But the whole point of using the
 `filter` function is to get a data frame back. If `filter` isn’t even
 going to be called until some random time in the future, how do we get its value
@@ -213,15 +213,15 @@ the right-hand side:
 df_filtered <- df %>% filter(state == "NY")
 ```
 
-When you use `%...>%`, the result you get back is a promise, whose *eventual*
+When you use `%then%`, the result you get back is a promise, whose *eventual*
 result will be the return value from the right-hand side:
 
 ```r
-df_filtered_promise <- df_promise %...>% filter(state == "NY")
+df_filtered_promise <- df_promise %then% filter(state == "NY")
 ```
 
-**Wait, what? If I have a promise, I can do stuff to it using `%...>%`, but
-then I just end up with another promise? Why not just have `%...>%` return a
+**Wait, what? If I have a promise, I can do stuff to it using `%then%`, but
+then I just end up with another promise? Why not just have `%then%` return a
 regular value instead of a promise?**
 
 Remember, the whole point of a promise is that we don’t know its value yet! So
@@ -231,7 +231,7 @@ value as output, you’d need to either be a time traveler or an oracle.
 To summarize, once you start working with a promise, any calculations and
 actions that are “downstream” of that promise will need to become
 promise-oriented. Generally, this means once you have a promise, you need to use
-`%...>%` and keep using it until your pipeline terminates.
+`%then%` and keep using it until your pipeline terminates.
 
 **I guess that makes sense. Still, if the only thing you can do with promises is
 make more promises, that limits their usefulness, doesn’t it?**
@@ -246,7 +246,7 @@ An example of the latter:
 
 ```r
 output$table <- renderTable({
-  read.csv.async("https://rstudio.github.io/promises/data.csv") %...>%
+  read.csv.async("https://rstudio.github.io/promises/data.csv") %then%
     filter(state == "NY")
 })
 ```
@@ -263,8 +263,8 @@ works perfectly fine:
 ```r
 # A reactive expression that returns a promise
 filtered_df <- reactive({
-  read.csv.async("https://rstudio.github.io/promises/data.csv") %...>%
-    filter(state == "NY") %...>%
+  read.csv.async("https://rstudio.github.io/promises/data.csv") %then%
+    filter(state == "NY") %then%
     arrange(median_income)
 })
 
@@ -272,7 +272,7 @@ filtered_df <- reactive({
 # (promise-returning) reactive, and returns a
 # new promise
 top_n_by_income <- reactive({
-  filtered_df() %...>%
+  filtered_df() %then%
     head(input$n)
 })
 
@@ -286,7 +286,7 @@ asynchronous tasks in response to reactivity.
 
 ```r
 observeEvent(input$save, {
-  filtered_df() %...>%
+  filtered_df() %then%
     write.csv("ny_data.csv")
 })
 ```
@@ -296,7 +296,7 @@ there’s no need to, because Shiny knows what to do with them.**
 
 Yes, that’s basically right. You just need to keep track of which functions and
 reactive expressions return promises instead of regular values, and be sure to
-interact with them using `%...>%` or other promise-aware operators and
+interact with them using `%then%` or other promise-aware operators and
 functions.
 
 **Wait, there are other promise-aware operators and functions?**
