--- a/vignettes/promises_07_combining.Rmd
+++ b/vignettes/promises_07_combining.Rmd
@@ -34,7 +34,7 @@ library(mirai)
 a <- mirai(read.csv("a.csv"))
 b <- mirai(read.csv("b.csv"))
 
-result <- promise_all(a = a, b = b) %...>% {
+result <- promise_all(a = a, b = b) %then% {
   rbind(.$a, .$b)
 }
 ```
@@ -50,7 +50,7 @@ library(mirai)
 a <- mirai(read.csv("a.csv"))
 b <- mirai(read.csv("b.csv"))
 
-promise_all(a = a, b = b) %...>%
+promise_all(a = a, b = b) %then%
   with({
     rbind(a, b)
   })
@@ -72,9 +72,9 @@ library(mirai)
 
 a <- mirai(1)
 
-a %...>% (function(a) {
+a %then% (function(a) {
   b <- mirai(2)
-  b %...>% (function(b) {
+  b %then% (function(b) {
     a + b
   })
 })
@@ -127,7 +127,7 @@ packages <- setNames(, c("ggplot2", "dplyr", "knitr"))
 
 pkg_dates <- promise_map(packages, get_pub_date)
 
-pkg_dates %...>% print()
+pkg_dates %then% print()
 ```
 
 The resulting output looks like this:
@@ -151,7 +151,7 @@ If you want behavior that's similar to `promise_map` but for all the async opera
 pkg_dates <- purrr::map(packages, get_pub_date) %>%
   promise_all(.list = .)
 
-pkg_dates %...>% print()
+pkg_dates %then% print()
 ```
 
 ## Reducing
@@ -197,6 +197,6 @@ promise_reduce(
     }
   },
   .init = NULL
-) %...>%
+) %then%
   print()
 ```
