--- a/vignettes/promises_08_casestudy.Rmd
+++ b/vignettes/promises_08_casestudy.Rmd
@@ -165,7 +165,7 @@ In the sections below, we'll take a look at the code behind some outputs and rea
 
 In some cases, these code snippets may be slightly abridged. See the [GitHub repository](https://github.com/rstudio/cranwhales) for the full code.
 
-Until you've received an introduction to the `%...>%` operator, the async code below will make no sense, so if you haven't read [*An informal intro to async programming*](https://rstudio.github.io/promises/articles/promises_02_intro.html) and/or [*Working with promises in R*](https://rstudio.github.io/promises/articles/promises_03_overview.html), I highly recommend doing so before continuing!
+Until you've received an introduction to the `%then%` operator, the async code below will make no sense, so if you haven't read [*An informal intro to async programming*](https://rstudio.github.io/promises/articles/promises_02_intro.html) and/or [*Working with promises in R*](https://rstudio.github.io/promises/articles/promises_03_overview.html), I highly recommend doing so before continuing!
 
 ### Loading `promises` and `mirai`
 
@@ -259,22 +259,22 @@ Since `data()` now returns a promise, the whole function needs to be modified to
 
 This is basically a best-case scenario for working with `promises`. The whole expression consists of a single magrittr pipeline. There's only one object  (`data()`) that's been converted to a promise. The promise object only appears once, at the head of the pipeline.
 
-When the stars align like this, converting this code to async is literally as easy as replacing each `%>%` with `%...>%`:
+When the stars align like this, converting this code to async is literally as easy as replacing each `%>%` with `%then%`:
 
 ```r
 # ASYNCHRONOUS version
 
 whales <- reactive({
-  data() %...>%
-    count(ip_id) %...>%
-    arrange(desc(n)) %...>%
+  data() %then%
+    count(ip_id) %then%
+    arrange(desc(n)) %then%
     head(input$count)
 })
 ```
 
 The input (`data()`) is a promise, the resulting output object is a promise, each stage of the pipeline returns a promise; but we can read and write this code almost as easily as the synchronous version!
 
-An example this simple may seem reductive, but this best-case scenario happens surprisingly often, if your coding style is influenced by the tidyverse. In this example app, **59%** of the reactives, observers, and outputs were converted using nothing more than replacing `%>%` with `%...>%`.
+An example this simple may seem reductive, but this best-case scenario happens surprisingly often, if your coding style is influenced by the tidyverse. In this example app, **59%** of the reactives, observers, and outputs were converted using nothing more than replacing `%>%` with `%then%`.
 
 One last thing before we move on. In the last section, I emphasized that reactive values cannot be read from inside a mirai. Here, we're using `head(input$count)` inside a promise-pipeline; since `data()` is written using a mirai, doesn't that mean… well… isn't this wrong?
 
@@ -300,17 +300,17 @@ Looks simple, but we can't just do a simple replacement this time. Can you see w
 # BAD VERSION DOESN'T WORK
 
 whale_downloads <- reactive({
-  data() %...>%
-    inner_join(whales(), "ip_id") %...>%
+  data() %then%
+    inner_join(whales(), "ip_id") %then%
     select(-n)
 })
 ```
 
 Remember, both `data()` and `whales()` now return a promise object, not a data frame. None of the dplyr verbs know how to deal with promises natively (and the same is true for almost every other R function, anywhere in the R universe).
 
-We're able to use `%...>%` with promises on the left-hand side and regular dplyr calls on the right-hand side, only because the `%...>%` operator "unwraps" the promise object for us, yielding a regular object (data frame or whatever) to be passed to dplyr. But in this case, we're passing `whales()`, which a promise object, directly to `inner_join`, and `inner_join` has no idea what to do with it.
+We're able to use `%then%` with promises on the left-hand side and regular dplyr calls on the right-hand side, only because the `%then%` operator "unwraps" the promise object for us, yielding a regular object (data frame or whatever) to be passed to dplyr. But in this case, we're passing `whales()`, which a promise object, directly to `inner_join`, and `inner_join` has no idea what to do with it.
 
-The fundamental thing to pattern-match on here, is that **we have a block of code that relies on more than one promise object**, and that means `%...>%` won't be enough. This is a pretty common situation as well, and occurs in **12%** of reactives and outputs in this example app.
+The fundamental thing to pattern-match on here, is that **we have a block of code that relies on more than one promise object**, and that means `%then%` won't be enough. This is a pretty common situation as well, and occurs in **12%** of reactives and outputs in this example app.
 
 Here's what the real solution looks like:
 
@@ -318,7 +318,7 @@ Here's what the real solution looks like:
 # ASYNCHRONOUS version
 
 whale_downloads <- reactive({
-  promise_all(data_df = data(), whales_df = whales()) %...>% with({
+  promise_all(data_df = data(), whales_df = whales()) %then% with({
     data_df %>%
       inner_join(whales_df, "ip_id") %>%
       select(-n)
@@ -328,12 +328,12 @@ whale_downloads <- reactive({
 
 #### Promises: the Gathering
 
-This solution uses the [promise gathering](https://rstudio.github.io/promises/articles/promises_07_combining.html#gathering) pattern, which combines `promises_all`, `%...>%`, and `with`.
+This solution uses the [promise gathering](https://rstudio.github.io/promises/articles/promises_07_combining.html#gathering) pattern, which combines `promises_all`, `%then%`, and `with`.
 
 * The `promise_all` function gathers multiple promise objects together, and returns a single promise object. This new promise object doesn't resolve until all the input promise objects are resolved, and it yields a list of those results.
 
 ```r
-> promise_all(a = mirai("Hello"), b = mirai("World")) %...>% print()
+> promise_all(a = mirai("Hello"), b = mirai("World")) %then% print()
 $a
 [1] "Hello"
 
@@ -341,7 +341,7 @@ $b
 [1] "World"
 ```
 
-* The `%...>%`, as before, "unwraps" the promise object and passes the result to its right hand side.
+* The `%then%`, as before, "unwraps" the promise object and passes the result to its right hand side.
 * The `with` function (from base R) takes a named list, and makes it into a sort of virtual parent environment while evaluating a code block you pass it.
 
 ```r
@@ -357,8 +357,8 @@ Error: object 'x' not found
 Let's once again combine the three, with the simplest possible example of the gathering pattern:
 
 ```r
-> promise_all(x = mirai("Hello"), y = mirai("World")) %...>%
-+   with({ paste(x, y) }) %...>%
+> promise_all(x = mirai("Hello"), y = mirai("World")) %then%
++   with({ paste(x, y) }) %then%
 +   print()
 [1] "Hello World"
 ```
@@ -393,10 +393,10 @@ Meaning, you *don't* do this:
 
 output$total_downloaders <- renderValueBox({
   valueBox(
-    data() %...>%
-      pull(ip_id) %...>%
-      unique() %...>%
-      length() %...>%
+    data() %then%
+      pull(ip_id) %then%
+      unique() %then%
+      length() %then%
       format(big.mark = ","),
     "unique downloaders"
   )
@@ -409,11 +409,11 @@ Instead, you do this:
 # ASYNCHRONOUS version
 
 output$total_downloaders <- renderValueBox({
-  data() %...>%
-    pull(ip_id) %...>%
-    unique() %...>%
-    length() %...>%
-    format(big.mark = ",") %...>%
+  data() %then%
+    pull(ip_id) %then%
+    unique() %then%
+    length() %then%
+    format(big.mark = ",") %then%
     valueBox("unique downloaders")
 })
 ```
@@ -437,13 +437,13 @@ output$downloaders <- renderPlot({
 
 While `dplyr` and other tidyverse packages are designed to link calls together with `%>%`, the older `ggplot2` package uses the `+` operator. This is mostly a small aesthetic wart when synchronous code, but it's a real problem with async, because the `promises` package doesn't currently have a promise-aware replacement for `+` like it does for `%>%`.
 
-Fortunately, there's a pretty good escape hatch for `%>%`, and `%...>%` inherited it too. Instead of a pipeline stage being a simple function call, you can put a `{` and `}` delimited code block, and inside of that code block, you can access the "it" value using a period (`.`).
+Fortunately, there's a pretty good escape hatch for `%>%`, and `%then%` inherited it too. Instead of a pipeline stage being a simple function call, you can put a `{` and `}` delimited code block, and inside of that code block, you can access the "it" value using a period (`.`).
 
 ```r
 # ASYNCHRONOUS version
 
 output$downloaders <- renderPlot({
-  whales() %...>% {
+  whales() %then% {
     whale_df <- .
     ggplot(whale_df, aes(ip_name, n)) +
       geom_bar(stat = "identity") +
@@ -452,12 +452,12 @@ output$downloaders <- renderPlot({
 })
 ```
 
-**The importance of this pattern cannot be overstated!** Using `%...>%` and simple calls alone, you're restricted to doing pipeline-compatible operations. But `%...>%` together with a curly-brace code block means your handler code can be any shape or size. Once inside that code block, you have a regular, non-promise value in `.` (if you even want to use it—sometimes you don't, as we'll see later). You can have zero, one, or more statements. You can use the `.` multiple times, in nested expressions, whatever.
+**The importance of this pattern cannot be overstated!** Using `%then%` and simple calls alone, you're restricted to doing pipeline-compatible operations. But `%then%` together with a curly-brace code block means your handler code can be any shape or size. Once inside that code block, you have a regular, non-promise value in `.` (if you even want to use it—sometimes you don't, as we'll see later). You can have zero, one, or more statements. You can use the `.` multiple times, in nested expressions, whatever.
 
 Tip: if you have extensive or complex code to put in a code block, start the block by creating a properly named variable to store the value of `.`. The reason for this is that `.` may acquire a different meaning than you intend as you add code to the code block. For example, if a magrittr pipeline starts with `.`, instead of evaluating the pipeline and returning a value, it creates a function that takes a single argument. So the following code wouldn't filter the resolved value of `whales()`, but instead, create an anonymous function that calls `filter(n > 1000)` on whatever you pass it.
 
 ```r
-whales() %...>% {
+whales() %then% {
   . %>% filter(n > 1000)
 }
 ```
@@ -465,7 +465,7 @@ whales() %...>% {
 This fixes it:
 
 ```r
-whales() %...>% {
+whales() %then% {
   whales_df <- .
   whales_df %>% filter(n > 1000)
 }
@@ -473,7 +473,7 @@ whales() %...>% {
 
 There are other ways to work around the above problem as well, but I like this fix because it doesn't require any thought or care. Just give the `.` value a new name, and forget the `.` exists.
 
-For untidy code with a single promise object, just remember: pair a single `%...>%` with a code block and you should be able to do almost anything.
+For untidy code with a single promise object, just remember: pair a single `%then%` with a code block and you should be able to do almost anything.
 
 ### Revisiting the `data` reactive: progress support
 
@@ -537,15 +537,16 @@ data <- eventReactive(input$date, {
     },
     path = path,
     url = url
-  ) %...>%
-    { p$set(message = "Parsing data...") } %...>%
+  ) %then%
+    { p$set(message = "Parsing data...") } %then%
     { mirai(
         {
           read_csv(path, col_types = "Dti---c-ci", progress = FALSE)
         },
         path = path
-      ) } %>%
-    finally(~p$close())
+      )
+    } %finally%
+    { p$close() }
 })
 ```
 
@@ -558,7 +559,7 @@ The single mirai we wrote earlier has now become a pipeline of promises:
 
 Note that neither the R6 call `p$set(message = ...)` nor the second `mirai()` call are tidy, so they use curly-brace blocks, as discussed in the above section about `biggest_whales`.
 
-The final step of dismissing the progress dialog doesn't use `%...>%` at all; because we want the progress dialog to dismiss whether the download and parse operations succeed or fail, we use the regular pipe `%>%` and `finally()` function instead. See the relevant section in [*Working with promises in R*](https://rstudio.github.io/promises/articles/promises_03_overview.html#cleaning-up-with-finally) to learn more.
+The final step of dismissing the progress dialog doesn't use `%then%` at all; because we want the progress dialog to dismiss whether the download and parse operations succeed or fail, we use `%finally%` operator instead. See the relevant section in [*Working with promises in R*](https://rstudio.github.io/promises/articles/promises_03_overview.html#cleaning-up-with-finally) to learn more.
 
 With these changes in place, we've now covered all of the changes to the application. You can see the full changes side-by-side via [this GitHub diff](https://github.com/rstudio/cranwhales/compare/sync...async?diff=split).
 
