--- a/vignettes/promises_05b_future_promise.Rmd
+++ b/vignettes/promises_05b_future_promise.Rmd
@@ -46,7 +46,7 @@ Note how R has to wait 20s before processing the 7th request (shown in green). T
 
 ```{r, echo = FALSE}
 library(vembedr)
-embed_vimeo("505287449") %>%
+embed_vimeo("505287449") |>
   use_align("center")
 ```
 
@@ -75,7 +75,7 @@ The vertical gray bars in the figure above represent timepoints where the main R
 
 ```{r, echo = FALSE}
 library(vembedr)
-embed_vimeo("505286442") %>%
+embed_vimeo("505286442") |>
   use_align("center")
 ```
 
