--- a/vignettes/promises_07_combining.Rmd
+++ b/vignettes/promises_07_combining.Rmd
@@ -148,7 +148,7 @@ $knitr
 If you want behavior that's similar to `promise_map` but for all the async operations to occur in parallel, you can achieve that with a combination of a regular `purrr::map` and `promise_all`:
 
 ```r
-pkg_dates <- purrr::map(packages, get_pub_date) %>%
+pkg_dates <- purrr::map(packages, get_pub_date) |>
   promise_all(.list = .)
 
 pkg_dates %then% print()
